EIDOMNI-136: add tests for proof of possession functionality