@@ -53,7 +53,6 @@ public class Ed25519Utils {
      * @return
      */
     public static String encodeMultibase(byte[] publicKeyEncoded) {
-
         ByteBuffer buff = ByteBuffer.allocate(34);
         // See https://github.com/multiformats/multicodec/blob/master/table.csv#L98
         buff.put((byte) 0xed); // Ed25519Pub/ed25519-pub is a draft code tagged "key" and described by: Ed25519 public key.
@@ -69,12 +68,13 @@ public class Ed25519Utils {
      * Of those data bytes, the first 2 denote the variant of the key and the rest being the key data.
      * </p>
      * <p>See <a href="https://www.w3.org/TR/controller-document/#Multikey">Multikey</a></p>
+     * <p>This method can fail, throwing an {@link IllegalArgumentException} when the provided multibase string is not supported.</p>
      *
      * @param multibase is a publicKey encoded as multibase
      * @return publicKey
      */
-    public static byte[] decodeMultibase(String multibase) throws NoSuchAlgorithmException, InvalidKeySpecException {
-        if (multibase.charAt(0) != 'z') {
+    public static byte[] decodeMultibase(String multibase) {
+        if (multibase.isEmpty() || multibase.charAt(0) != 'z') {
             throw new IllegalArgumentException();
         }
         multibase = multibase.substring(1);
@@ -84,26 +84,7 @@ public class Ed25519Utils {
         if (buf[0] == (byte)0xed && buf[1] == (byte)0x01) {// Ed25519Pub/ed25519-pub is a draft code tagged "key" and described by: Ed25519 public key.
             return Arrays.copyOfRange(buf, 2, buf.length);
         }
-        throw new IllegalArgumentException();
+        throw new IllegalArgumentException("Only Ed25519 public key is supported");
     }
 
-    /*
-    public static PrivateKey getPrivateKeyFromJKS(InputStream jksFile, String password, String alias, String keyPassword) throws CertificateException, IOException, NoSuchAlgorithmException, UnrecoverableEntryException, KeyStoreException, KeyException {
-        var provider = Security.getProvider(BouncyCastleProvider.PROVIDER_NAME);
-        // CAUTION Calling KeyStore.getInstance("JKS") may cause:
-        //         "java.security.NoSuchAlgorithmException: no such algorithm: EdDSA for provider SUN"
-        KeyStore keyStore = KeyStore.getInstance("PKCS12", provider);
-        char[] pass = null;
-        if (password != null) {
-            pass = password.toCharArray();
-        }
-        keyStore.load(jksFile, pass); // java.io.IOException: keystore password was incorrect
-
-        // CAUTION Flexible constructors is a preview feature and is disabled by default. (use --enable-preview to enable flexible constructors)
-        //this(createFromKeyStore(keyStore, alias, keyPassword));
-        var obj = createFromKeyStore(keyStore, alias, keyPassword);
-        var keyPair = obj.keyPair;
-        return keyPair.getPrivate();
-    }
-     */
 }
